# Quotes

./: .gitignore  Dockerfile  LICENSE  README.md  config.toml  pyproject.toml  requirements.txt
app/: __init__.py  __main__.py  config.py  logger.py
app/quotes/: color.py  emoji.py  generate.py  models.py  text_utils.py
app/routers/: __init__.py  generate.py
app/templates/: quote.jinja2  styles.css
app/tests/: README.md  test.html
docs/source/: conf.py  configuration.rst  index.rst  installation.rst  toc.rst  usage.rst
examples/: pyrogram_bot.py
